# prs-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 54510c15c3fa_initial_schema.py  9049b6c4b524_remove_row_constraints_from_dataset_rows.py  bde21e3845f6_initial_schema.py
scripts/: e2e_run_test.py
src/: config.py  database.py  main.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/common/: exceptions.py  schemas.py  types.py
src/datasets/: dependencies.py  models.py  router.py  schemas.py
src/llm/: __init__.py  base.py  factory.py  gemini.py
src/profiles/: dependencies.py  models.py  router.py  schemas.py
src/prompts/: dependencies.py  models.py  router.py  schemas.py
src/runs/: dependencies.py  models.py  regression.py  router.py  schemas.py  service.py
src/runs/evaluator/: __init__.py  format_layer.py  logic_layer.py  semantic_layer.py  waterfall.py
tests/: conftest.py  test_auth.py  test_format_layer.py  test_health.py  test_logic_layer.py  test_profiles.py  test_prompts.py  test_semantic_layer.py  test_waterfall.py
tests/runs/: __init__.py  test_integration.py  test_regression.py  test_router.py  test_service.py
